updating api requests

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-MONGO_URL = mongodb+srv://noakatz465:EoVRm8pIGA4AvIHE@Recipes.qbw7g.mongodb.net/myAppDB
+MONGO_URL = mongodb+srv://gittysinai214:eS29ZNqqRJmmL5kU@recipes-project.nnzxf.mongodb.net/recipes-project
+PASS=eS29ZNqqRJmmL5kU
+USER_NAME=gittysinai214
