--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
     "mongoose": "^8.8.1",
     "next": "14.2.17",
     "react": "^18",
